# compare_variables

./: .gitignore  Cargo.toml  README.md
compare_variables_macro/: Cargo.toml  README.md
compare_variables_macro/src/: lib.rs
docs/: links.md  main.md
src/: lib.rs
tests/: struct.rs  struct_fields.rs  units_of_measure.rs  value_comparison.rs
