[package]
name = "compare_variables"
version = "0.2.0"
edition = "2024"
description = "A Rust procedural macro for comparing the ordering of variables and creating useful error messages"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/cart_lin.git"

[dependencies]
compare_variables_macro = { version = "0.2.0", path = "compare_variables_macro", optional = true}

[features]
default = ["proc_macro"]
proc_macro = ["dep:compare_variables_macro"]

[dev-dependencies]
compare_variables = { path = ".", features = ["proc_macro"] } 
uom = {version = "0.36", default-features = false, features = ["f64", "si", "std"]}